--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ggj24.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ggj24.data.gz",
-        frameworkUrl: buildUrl + "/ggj24.framework.js.gz",
-        codeUrl: buildUrl + "/ggj24.wasm.gz",
+        dataUrl: buildUrl + "/ggj24.data",
+        frameworkUrl: buildUrl + "/ggj24.framework.js",
+        codeUrl: buildUrl + "/ggj24.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MixStudio",
         productName: "LaughterLost",
