--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1920 height=1080></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ggj24.loader.js";
+      var loaderUrl = buildUrl + "/build2.4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ggj24.data",
-        frameworkUrl: buildUrl + "/ggj24.framework.js",
-        codeUrl: buildUrl + "/ggj24.wasm",
+        dataUrl: buildUrl + "/build2.4.data",
+        frameworkUrl: buildUrl + "/build2.4.framework.js",
+        codeUrl: buildUrl + "/build2.4.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MixStudio",
         productName: "LaughterLost",
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
 
       loadingBar.style.display = "block";
